Fixing hover styling to not be cut off when in a grid

--- a/src/sass/inputs.scss
+++ b/src/sass/inputs.scss
@@ -31,6 +31,7 @@
 .jigl-hover {
     box-shadow: 0 0 3px rgba(127, 127, 127, 0.8);
     border: 1px solid gray;
+    z-index: 1000;
 }
 
 .jigl-xl {
